--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,10 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1"
   }
 }
