re-setup sqlite and seed

--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,6 +1,7 @@
 {
   "development": {
-    "use_env_variable": "DATABASE_URL"
+    "dialect": "sqlite",
+    "storage": "smarfgems"
   },
   "test": {
     "username": "root",
