model undefined bug fix

--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "smarfgems"
+    "storage": "smarfgems.db"
   },
   "test": {
     "username": "root",
