--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "base64-img": "^1.0.4",
     "btoa": "^1.2.1",
     "js-cookie": "^2.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-image": "^2.4.0",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
