--- a/api/package.json
+++ b/api/package.json
@@ -21,9 +21,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.4",
     "promise.prototype.finally": "^3.1.2",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.2.0"
   }
 }
