--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-images-upload": "^1.2.8",
     "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
